# MuscleFuck

./: LICENSE  README.md  pyproject.toml
src/: example.py  main.py  muscle_fuck.py
test/: test_muscle_fuck.py
tests/: test_muscle_fuck.py
