[tool.poetry]
name = "muscle_fuck"
version = "0.1.0"
description = "Muscle and Programming"
authors = ["diohabara <diohabara@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gpiozero = "^1.6.2"
pigpio = "^1.78"
"RPi.GPIO" = "^0.7.0"

[tool.poetry.dev-dependencies]
pysen = {version = "0.10.1", extras = ["lint"]}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

